posted messages onto kafka from batch
