# swagger/api.yaml
@@ -282,21 +282,7 @@ definitions:
   UpdateInfos:
     type: object
     required:
-      - update_information
+      - tracking_info
     properties:
-      update_information:
-        type: array
-        items:
-          $ref: '#/definitions/UpdateInfo'
-
-  UpdateInfo:
-    type: object
-    required:
-      - update_id
-      - info_id
-    properties:
-      update_id:
-        type: string
-        description: a generated unique id for each info update
-      enrichment_id:
+      tracking_id:
         type: string
